--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,28 @@
     <title>Arif Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1>Md. Arif Hossain World</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Md. Arif Hossain </span>World</h1>
+            <h3>Php Laravel Developer</h3>
+            <p>Hi, Im MD. Arif Hossain. I'm a Backend developer.I'm a quick learner and i love to take challengs. I'm so
+                much hunger to learn. I want to be a expert on Server site development. I do like to learn different
+                Programming language.</p>
+
+            <a target="_blank" class="link-btn" href="https://www.linkedin.com/in/arif-hossain-aa0300242/">Here Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/arif.png" alt="">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
