--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Md. Arif Hossain </span>World</h1>
@@ -27,6 +27,7 @@
         <div class="half-width">
             <img src="images/arif.png" alt="">
         </div>
+
     </section>
 
 
