dream Big added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-color">Md. Arif Hossain </span>World</h1>
+            <h1><span class="orange-color">Md. Arif Hossain's </span>World</h1>
             <h3>Php Laravel Developer</h3>
             <p>Hi, Im MD. Arif Hossain. I'm a Backend developer.I'm a quick learner and i love to take challengs. I'm so
                 much hunger to learn. I want to be a expert on Server site development. I do like to learn different
@@ -26,6 +26,20 @@
         </div>
         <div class="half-width">
             <img src="images/arif.png" alt="">
+        </div>
+
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/arif.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Full stack <span class="orange-color">Developer</span></h2>
+            <p>I have already learn Php, laravel, MySQL, Jequery and ajax. Now i'm improving my skills day by day. I
+                need a good mentor to continue my learning. </p>
+            <a target="_blank" class="link-btn" href="">Downlaod My CV</a>
         </div>
 
     </section>
