--- a/index.html
+++ b/index.html
@@ -10,61 +10,101 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <section class="top-banner flexible-container">
-        <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1><span class="orange-color">Md. Arif Hossain's </span>World</h1>
-            <h3>Php Laravel Developer</h3>
-            <p>Hi, Im MD. Arif Hossain. I'm a Backend developer.I'm a quick learner and i love to take challengs. I'm so
-                much hunger to learn. I want to be a expert on Server site development. I do like to learn different
-                Programming language.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <section class="top-banner flexible-container">
+                    <div class="half-width">
+                        <h1>Welcome To</h1>
+                        <h1><span class="orange-color">Md. Arif Hossain's </span>World</h1>
+                        <h3>Php Laravel Developer</h3>
+                        <p>Hi, Im MD. Arif Hossain. I'm a Backend developer.I'm a quick learner and i love to take
+                            challengs. I'm so
+                            much hunger to learn. I want to be a expert on Server site development. I do like to learn
+                            different
+                            Programming language.</p>
 
-            <a target="_blank" class="link-btn" href="https://www.linkedin.com/in/arif-hossain-aa0300242/">HIRE ME</a>
-        </div>
-        <div class="half-width">
-            <img src="images/arif.png" alt="">
-        </div>
+                        <a target="_blank" class="link-btn"
+                            href="https://www.linkedin.com/in/arif-hossain-aa0300242/">HIRE ME</a>
+                    </div>
+                    <div class="half-width">
+                        <img src="images/arif.png" alt="">
+                    </div>
 
-    </section>
-    <section class="dream-big flexible-container">
-        <div class="half-width">
-            <img src="images/arif2.png" alt="">
-        </div>
-
-        <div class="half-width">
-            <h1>Dream Big</h1>
-            <h2>Become a Full stack <span class="orange-color">Developer</span></h2>
-            <p>I have already learn Php, laravel, MySQL, Jequery and ajax. Now i'm improving my skills day by day. I
-                need a good mentor to continue my learning. I want to be a full stack web developer. </p>
-            <a target="_blank" class="link-btn" href="">Downlaod My CV</a>
-        </div>
-
-    </section>
-    <section class="experience-area">
-        <h2>Experiences</h2>
-        <div class="flexible-container">
-            <div class="experiance-item" id="web-developer">
-                <h2> Web Developer</h2>
-                <h3>2022-Present | Begainner Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
-                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
-                    jquery. I even know the deployment, server and security. I will give you 100% web solution.</p>
-            </div>
-            <div class="experiance-item" id="baby-developer">
-                <h2>Backend Developer</h2>
-                <h3>2021</h3>
-                <p>i'm a Backend Developer with PHP Laravel. I have two projects. A blog website built with PHP OOP and
-                    a E-commerce with Laravel. </p>
+                </section>
             </div>
         </div>
+    </div>
 
-    </section>
-    <footer>
-        <p>© Md. Arif Hossain 2022.</p>
-    </footer>
+    <div class="row">
+        <div class="col-md-12">
+            <section class="dream-big flexible-container">
+                <div class="half-width">
+                    <img src="images/arif2.png" alt="">
+                </div>
+
+                <div class="half-width">
+                    <h1>Dream Big</h1>
+                    <h2>Become a Full stack <span class="orange-color">Developer</span></h2>
+                    <p>I have already learn Php, laravel, MySQL, Jequery and ajax. Now i'm improving my skills day by
+                        day. I
+                        need a good mentor to continue my learning. I want to be a full stack web developer. </p>
+                    <a target="_blank" class="link-btn" href="">Downlaod My CV</a>
+                </div>
+
+            </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <section class="experience-area">
+                <h2>Experiences</h2>
+                <div class="flexible-container">
+                    <div class="experiance-item" id="web-developer">
+                        <h2> Web Developer</h2>
+                        <h3>2022-Present | Begainner Level Developer</h3>
+                        <p>I am the master of HTML, CSS and Javascript and bootstrap. I know everything needed to make a
+                            website
+                            function,
+                            efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                            called
+                            jquery. I even know the deployment, server and security. I will give you 100% web solution.
+                        </p>
+                    </div>
+                    <div class="experiance-item" id="baby-developer">
+                        <h2>Backend Developer</h2>
+                        <h3>2021</h3>
+                        <p>i'm a Backend Developer with PHP Laravel. I have two projects. A blog website built with PHP
+                            OOP and
+                            a E-commerce with Laravel. </p>
+                    </div>
+                </div>
+
+            </section>
+        </div>
+    </div>
+
+    <div class="footersection">
+        <footer>
+            <p>© Md. Arif Hossain 2022.</p>
+        </footer>
+    </div>
+
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 
 
 </body>
