initial skill and Cv added

--- a/index.html
+++ b/index.html
@@ -59,12 +59,59 @@
                     <p>I have already learn Php, laravel, MySQL, Jequery and ajax. Now i'm improving my skills day by
                         day. I
                         need a good mentor to continue my learning. I want to be a full stack web developer. </p>
-                    <a target="_blank" class="link-btn" href="">Downlaod My CV</a>
+                    <a target="_blank" class="link-btn" href="cv.pdf">Downlaod My CV</a>
                 </div>
 
             </section>
         </div>
     </div>
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <section class="skill-area">
+                <h2>Skills</h2>
+                <div class="flexible-container">
+                    <div class="experiance-item" id="lang">
+                        <h2> Programming Languages</h2>
+                        <h3>2022-Present</h3>
+                        <ul>
+                            <li>C</li>
+                            <li>C++</li>
+                            <li>Java</li>
+                            <li>PHP</li>
+                            <li>JavaScript</li>
+                            <li>Solidity</li>
+                        </ul>
+                    </div>
+                    <div class="experiance-item" id="frontend-developer">
+                        <h2>Frontend development</h2>
+                        <h3>2022-Present</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Bootstrap</li>
+                            <li>JavaScript</li>
+                            <li>Jquery</li>
+                            <li>Ajax</li>
+                        </ul>
+
+                    </div>
+                    <div class="experiance-item" id="backend-developer">
+                        <h2>Backend development</h2>
+                        <h3>2022-Present</h3>
+                        <ul>
+                            <li>PHP(OOP)</li>
+                            <li>Laravel</li>
+                            <li>MySQL</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </section>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <section class="experience-area">
@@ -72,7 +119,7 @@
                 <div class="flexible-container">
                     <div class="experiance-item" id="web-developer">
                         <h2> Web Developer</h2>
-                        <h3>2022-Present | Begainner Level Developer</h3>
+                        <h3>2022-Present</h3>
                         <p>I am the master of HTML, CSS and Javascript and bootstrap. I know everything needed to make a
                             website
                             function,
